# interpolation-sw-2010

./: .gitignore  README.md  check_dates.py  pyproject.toml  pytest.ini  requirements.txt  test.ipynb  visualization.ipynb
backup/mains/: get_monthly_us_data.py
backup/src/interpolation_sw_2010/: __init__.py  cli.py  config.py  kalman_optimization.py  regressors.py  simple_interpolator.py  sw2010_interpolator.py  validation.py  visualization.py
data/: monthly_gdp.csv  raw_data.xlsx  sources.json  transformed_data.xlsx  transformed_data_detrended.xlsx  transformed_data_gdp_results.csv  transformed_data_monthly_indicators.xlsx  update.xlsx  us_gdp_monthly.csv  ~$raw_data.xlsx
data/fred/A680RC1Q027SBEA/: data.csv  metadata.txt
data/fred/A681RC1Q027SBEA/: data.csv  metadata.txt
data/fred/B009RC1Q027SBEA/: data.csv  metadata.txt
data/fred/CBI/: data.csv  metadata.txt
data/fred/EXPGS/: data.csv  metadata.txt
data/fred/GCE/: data.csv  metadata.txt
data/fred/GDPDEF/: data.csv  metadata.txt
data/fred/IMPGS/: data.csv  metadata.txt
data/fred/PCEC/: data.csv  metadata.txt
data/fred/PRFI/: data.csv  metadata.txt
data/raw/: amtmvs_2.csv  amtmvs_2_metadata.json  amxdvs_2.csv  amxdvs_2_metadata.json  andevs_2.csv  andevs_2_metadata.json  con_gov.csv  con_gov_metadata.json  exports_metadata.json  imports_metadata.json  info.txt  inv_ch_1.csv  inv_ch_1_bea_info.json  inv_ch_1_metadata.json  inv_ch_2_bea_info.json  inv_ch_2_metadata.json  pce_metadata.json  pcepi.csv  pcepi_metadata.json  priv_metadata.json  res.csv  res_metadata.json  wages_g_1_bea_info.json  wages_g_2_bea_info.json
data/raw/exports/: goods_and_services.xlsx
data/raw/imports/: goods_and_services.xlsx
data/raw/monthly/: amtmvs_2_metadata.json  amxdvs_2_metadata.json  andevs_2_metadata.json  con_gov_metadata.json  exports.csv  exports_metadata.json  imports.csv  imports_metadata.json  inv_ch_1_metadata.json  inv_ch_2.csv  inv_ch_2_metadata.json  pce.csv  pce_metadata.json  pcepi_metadata.json  priv.csv  priv_metadata.json  res_metadata.json  wages_g_1.csv  wages_g_1_metadata.json  wages_g_2.csv  wages_g_2_metadata.json
data/raw/quarterly/: GDPDEF.csv  GDPDEF_metadata.json  GOV_Q.csv  GOV_Q_metadata.json  INVTCHANGE_Q.csv  INVTCHANGE_Q_metadata.json  NR_STRUC_Q.csv  NR_STRUC_Q_metadata.json  PCEC.csv  PCEC_metadata.json  RES_Q.csv  RES_Q_metadata.json  equip_q.csv  equip_q_metadata.json  exports_q.csv  exports_q_metadata.json  imports_q.csv  imports_q_metadata.json
data/summary/: all_data_summary.txt  bea_summary.txt  census_summary.txt  fred_summary.txt
data/temp/: monthly_preprocessed.csv  preprocessed_data.xlsx  quarterly_preprocessed.csv
mains/: __init__.py  fetch_all_sw_data.py  get_monthly_us_data.py  sw2010_gdp_interpolator.py  sw2010_update_raw_data.py  sw2010_upload_to_aws.py  test_transform.py
scripts/: setup_api_keys.py
src/interpolation_sw_2010/: __init__.py  cli.py  config.yaml  data_manager.py  main.py  spline_detrending.py  sw2010_interpolator.py
src/interpolation_sw_2010/aws_manager/: s3.py
src/interpolation_sw_2010/bea/: __init__.py  client.py
tests/: test_bea_data_fetcher.py
(+25 files in other folders)
