[tool.poetry]
name = "interpolation-sw-2010"
version = "0.1.0"
description = "Stock-Watson interpolation procedure for temporal disaggregation of quarterly GDP to monthly values"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "interpolation_sw_2010", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.26.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
pyyaml = "^6.0"
tqdm = "^4.65.0"
openpyxl = "^3.1.0"  # For Excel file support
xlrd = "^2.0.1"
requests = "^2.31.0"  # For API requests
boto3 = "^1.34.0"  # For AWS services
fredapi = "^0.5.1"  # For FRED API access
# beaapi is installed directly from wheel file
scipy = "^1.15.2"
selenium = "^4.15.0"  # For web scraping
beautifulsoup4 = "^4.12.0"  # For HTML parsing
webdriver-manager = "^4.0.0"  # For managing webdriver
lxml = "^4.9.0"  # For XML/HTML processing
html5lib = "^1.1"  # For HTML parsing
python-dotenv = "^1.0.0"  # For environment variables
statsmodels = "^0.14.0"  # For statistical models

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest-cov = "^4.1.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sw2010-gdp-interpolator = "mains.sw2010_gdp_interpolator:main"
sw2010-fetch-data = "mains.fetch_all_sw_data:main"
sw2010-update-raw-data = "mains.sw2010_update_raw_data:main"
sw2010-bea-fetcher = "interpolation_sw_2010.cli:main"  # Add CLI entry point for BEA data fetcher

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
